# BasilGL

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  TODO  build-notes.txt
docs/: CMakeLists.txt  Doxyfile_in
examples/: AppTest.cpp  BasilTest.cpp  CMakeLists.txt
examples/assets/: test.json
examples/panes/: CMakeLists.txt  ImGuiExamplePane.hpp  main.cpp
examples/raytracer/: CMakeLists.txt  Camera.hpp  CameraController.hpp  CubemapLoader.hpp  SidePanel.hpp  main.cpp
examples/raytracer/assets/: uniforms.json
examples/raytracer/shaders/: raytracer.frag
examples/raytracer/src/: Camera.cpp  (+7 more)
examples/scratch/: CMakeLists.txt  main.cpp
examples/shaders/: test.frag  test.shadertoy
examples/shadertoy/: CMakeLists.txt  ShadertoyImGuiPane.hpp  main.cpp
src/: CMakeLists.txt  Definitions.hpp  main.cpp  test.cu
src/App/: BasilApp.cpp  BasilApp.hpp  IBasilWidget.hpp
src/Application/: BasilApp.cpp  BasilApp.hpp  IBuilder.hpp  WindowBuilder.cpp  WindowBuilder.hpp
src/Builder/: IBuildable.hpp  IBuilder.hpp
src/Chrono/: FrameClock.hpp  TimeSource.hpp
src/Context/: BasilContext.cpp  BasilContext.hpp  BasilContextConsumer.hpp  BasilContextDependency.hpp  BasilContextLock.cpp  BasilContextLock.hpp  IBasilContextConsumer.hpp  IBasilContextDependency.hpp
src/Data/: DataMessage.hpp  DataModel.cpp  DataModel.hpp  FileDataLoader.cpp  FileDataLoader.hpp  FileTextureSource.cpp  FileTextureSource.hpp  GLTextureFormat.hpp  GLTextureUniform.hpp  GLUniform.hpp  IDataModel.hpp  IDataPassThrough.hpp  IDataPublisher.cpp  IDataPublisher.hpp  IDataSubscriber.hpp  ITextureSource.hpp  ShaderUniformModel.cpp  ShaderUniformModel.hpp  SpanTextureSource.hpp  SystemTimeModel.hpp  TextureFormat.hpp  UserInputModel.hpp
src/File/: FileDataLoader.cpp  FileDataLoader.hpp  FileTextureSource.cpp  FileTextureSource.hpp  ImageFileCapture.cpp  ImageFileCapture.hpp
src/Frame/: DefaultTimerSource.cpp  DefaultTimerSource.hpp  FrameController.cpp  FrameController.hpp  FrameMetrics.cpp  FrameMetrics.hpp  IFrameProcess.hpp  IRunnable.hpp  ITimerSource.hpp  MetricsReporter.cpp  MetricsReporter.hpp  TimeSource.hpp
src/ImGui/: ImGuiPane.cpp  ImGuiPane.hpp
src/Logger/: Logger.cpp  Logger.hpp
src/Logging/: Logger.cpp  Logger.hpp  LoggerDefinitions.hpp
src/OpenGL/: GLProgramUniformManager.cpp  GLProgramUniformManager.hpp  GLShader.hpp  GLShaderPane.cpp  GLShaderPane.hpp  GLShaderProgram.cpp  GLShaderProgram.hpp  GLTexture.cpp  GLTexture.hpp  GLTextureFormat.hpp  GLUniform.hpp  HotReloadShaderPane.cpp  HotReloadShaderPane.hpp  ITextureSource.hpp
src/Process/: FrameClock.hpp  IProcess.hpp  LambdaProcess.hpp  MetricsObserver.cpp  MetricsObserver.hpp  MetricsRecord.cpp  MetricsRecord.hpp  MetricsReporter.cpp  MetricsReporter.hpp  ProcessController.cpp  ProcessController.hpp  ProcessEnums.hpp  ProcessInstance.hpp  ProcessSchedule.cpp  ProcessSchedule.hpp  TimeSource.hpp
src/PubSub/: DataMessage.hpp  IDataPassThrough.hpp  IDataPublisher.hpp  IDataSubscriber.hpp
src/Utility/: LambdaProcess.hpp  MetricsReporter.cpp  MetricsReporter.hpp  UniformJSONFileWatcher.cpp  UniformJSONFileWatcher.hpp
src/Widget/: MetricsReporter.cpp  MetricsReporter.hpp  MousePositionUniformPublisher.hpp  ScreenshotTool.cpp  ScreenshotTool.hpp  ShadertoyUniformPublisher.cpp  ShadertoyUniformPublisher.hpp  StopAfterTime.cpp  StopAfterTime.hpp  SystemTimeWatcher.cpp  SystemTimeWatcher.hpp  UniformJSONFileWatcher.cpp  UniformJSONFileWatcher.hpp  UserInputWatcher.cpp  UserInputWatcher.hpp
src/Window/: GLShader.cpp  GLShader.hpp  GLShaderPane.cpp  GLShaderPane.hpp  GLShaderProgram.cpp  GLShaderProgram.hpp  GLTexture.cpp  GLTexture.hpp  GLTexturePane.cpp  GLTexturePane.hpp  HotReloadShaderPane.cpp  HotReloadShaderPane.hpp  IPane.hpp  SplitPane.cpp  SplitPane.hpp  WindowView.cpp  WindowView.hpp
src/frame/: defaulttimer.cpp  framecontroller.cpp  framecontroller.hpp  metrics.cpp
src/window/: windowview.cpp  windowview.hpp
tst/: CMakeLists.txt  GLTestUtils.hpp  TestUtils.hpp  dummyTest.cpp  frame.test.cpp  main.test.cpp  test.cpp  test.test.cpp  window.test.cpp
tst/App/: AppTestUtils.hpp  BasilApp.test.cpp
tst/Chrono/: TimeSource.test.cpp
tst/Context/: BasilContext.test.cpp
tst/Data/: DataModel.test.cpp  FileDataLoader.test.cpp  FileTextureSource.test.cpp  IDataPassThrough.test.cpp  IDataPublisher.test.cpp  ITextureSource.test.cpp  PubSubTestUtils.hpp  ShaderUniformModel.test.cpp  SpanTextureSource.test.cpp  SystemTimeModel.test.cpp  UserInputModel.test.cpp
tst/File/: FileDataLoader.test.cpp  FileTestUtils.hpp  FileTextureSource.test.cpp  ImageFileCapture.test.cpp
tst/Frame/: ChronoTestUtils.hpp  DefaultTimerSource.test.cpp  FrameController.test.cpp  FrameMetrics.test.cpp  MetricsReporter.test.cpp  TimeSource.test.cpp
tst/ImGui/: ImGuiPane.test.cpp
tst/Integration/: OpenGL.test.cpp
tst/Logger/: Logger.test.cpp
tst/Logging/: Logger.test.cpp
tst/OpenGL/: GLProgramUniformManager.test.cpp  GLShader.test.cpp  GLShaderPane.test.cpp  GLShaderProgram.test.cpp  GLTestUtils.hpp  GLTexture.test.cpp  GLUniform.test.cpp  HotReloadShaderProgram.test.cpp  ITextureSource.test.cpp  SpanTextureSource.test.cpp
tst/Process/: ChronoTestUtils.hpp  IProcess.test.cpp  LambdaProcess.test.cpp  MetricsObserver.test.cpp  MetricsRecord.test.cpp  MetricsReporter.test.cpp  ProcessController.test.cpp  ProcessInstance.test.cpp  ProcessSchedule.test.cpp  ProcessTestUtils.hpp  TimeSource.test.cpp
tst/PubSub/: DataMessage.test.cpp  IDataPassThrough.test.cpp  IDataPublisher.test.cpp  PubSubTestUtils.hpp
tst/Utility/: LambdaProcess.test.cpp  MetricsReporter.test.cpp  UniformJSONFileWatcher.test.cpp
tst/Widget/: MetricsReporter.test.cpp  ScreenshotTool.test.cpp  ShadertoyUniformPublisher.test.cpp  StopAfterTime.test.cpp  UniformJSONFileWatcher.test.cpp  UserInputWatcher.test.cpp
tst/Window/: GLShader.test.cpp  GLShaderPane.test.cpp  GLShaderProgram.test.cpp  GLTestUtils.hpp  GLTexture.test.cpp  GLTexturePane.test.cpp  HotReloadShaderProgram.test.cpp  SplitPane.test.cpp  WindowTestUtils.hpp  WindowView.test.cpp
(+38 files in other folders)
